--- a/dom builder.css
+++ b/dom builder.css
@@ -8,11 +8,20 @@
 	background-repeat: no-repeat;
 	width: 592px;
 	height: 620px;
-	
 
 }
-div > button{
+#square {
+	width: 100px;
+	height: 100px;
+	background: red;
+	position:relative;
+	top:90px;
+	left:200px;
+}
+
+
+#tableBuilder{
 font:italic;
 	position:relative;
-	top:100px;
-	left:30px;}
+	top:300px;
+	right:auto;}
