--- a/dom builder.css
+++ b/dom builder.css
@@ -23,9 +23,10 @@ body{
 	width: 100px;
 	height: 100px;
 	background: red;
+	padding: 0.5em
 	position:relative;
-	top:500px;
-	left:10px;
+	top:20px;
+	left:50px;
 }
 
 #Header Move{
