colour change unsuccessful
spectrum colour change unsuccessful, trying slider again

--- a/dom builder.css
+++ b/dom builder.css
@@ -37,6 +37,15 @@ body{
 	left:50px;
 }
 
+#colourChange{
+	
+	font:italic;
+	position:relative;
+	top:150px;
+	left:50px;
+	
+}
+
 /*.blue {
     color: blue;
 }
