Created Colour Toggle on square
Successful at changing font colour of square go to blue & back using
toggle function

--- a/dom builder.css
+++ b/dom builder.css
@@ -48,11 +48,11 @@ body{
 
 
 
-/*.blue {
+.blue {
     color: blue;
 }
 
-#Header Move{
+/*#Header Move{
 	position:relative;
 	top:50px;
 	left:10px;
