--- a/dom builder.css
+++ b/dom builder.css
@@ -17,7 +17,7 @@ body{
 	
 	font:italic;
 	position:relative;
-	top:200px;
+	top:170px;
 	left:50px;
 }
 
@@ -31,10 +31,42 @@ body{
 	width: 100px;
 	height: 100px;
 	background: red;
-	padding: 0.5em
+	padding: 0.5em;
 	position:relative;
 	top:20px;
 	left:50px;
+}
+
+#button {
+    padding: .5em 1em;
+    text-decoration: none;
+  }
+  
+  #effect {
+    position: relative;
+   	width: 100px;
+	height: 100px;
+	background: #11CC4F;
+	padding: 0.5em;
+	top:-490px;
+	left:300px;
+  }
+  #blowUp {
+	  position:relative;
+	top: -300px;
+	left: 50px;  
+  }
+  #effect h3 {
+    margin: 0;
+    padding: 0.4em;
+    text-align: center;
+  }
+
+#slider-vertical{
+	position:relative;
+	top: -10px;
+	left: 90px;
+	
 }
 
 #colourChange{
@@ -47,6 +79,18 @@ body{
 }
 
 
+ p {
+    margin: 8px;
+    font-size: 20px;
+    color: blue;
+    cursor: pointer;
+  }
+  b {
+    text-decoration: underline;
+  }
+  button {
+    cursor: pointer;
+  }
 
 .blue {
     color: blue;
